housing-api/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: housing-api
  labels:
    name: housing-api
